// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDetail renders correctly 1`] = `
.c0 {
  font-size: 0.75rem;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  margin-bottom: 5px;
}

.c1 {
  font-size: 1.3rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

<div
  class="account-detail"
>
  <div
    class="c0"
  >
    TestTitle
  </div>
  <div
    class="c1"
  >
    TestValue
  </div>
</div>
`;

exports[`AccountDetail renders correctly when \`bold\` prop passed in 1`] = `
.c0 {
  font-size: 0.75rem;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  margin-bottom: 5px;
}

.c1 {
  font-size: 1.3rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-weight: bold;
  font-size: 1.5rem;
}

.c2 {
  background-color: #ff5248;
  color: #1b1b1b;
  box-shadow: 8px 8px 4px -4px rgba(255,82,72,0.4);
  border-radius: 2px;
  padding: 15px;
  text-align: center;
  position: fixed;
  width: 300px;
  margin-left: -150px;
  left: 50%;
  bottom: 30px;
  z-index: 1;
  visibility: hidden;
}

@media (min-width:30em) {
  .c2 {
    width: 400px;
    margin-left: -200px;
  }
}

<div>
  <div
    class="account-detail"
  >
    <div
      class="c0"
    >
      TestTitle
    </div>
    <div
      class="c1"
    >
      TestValue
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`AccountDetail renders correctly when \`inline\` prop passed in 1`] = `
.c0 {
  font-size: 0.75rem;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  display: inline-block;
  margin-right: 15px;
}

.c1 {
  font-size: 1.3rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  display: inline-block;
}

.c2 {
  background-color: #ff5248;
  color: #1b1b1b;
  box-shadow: 8px 8px 4px -4px rgba(255,82,72,0.4);
  border-radius: 2px;
  padding: 15px;
  text-align: center;
  position: fixed;
  width: 300px;
  margin-left: -150px;
  left: 50%;
  bottom: 30px;
  z-index: 1;
  visibility: hidden;
}

@media (min-width:30em) {
  .c2 {
    width: 400px;
    margin-left: -200px;
  }
}

<div>
  <div
    class="account-detail"
  >
    <div
      class="c0"
    >
      TestTitle
    </div>
    <div
      class="c1"
    >
      TestValue
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;
